$Id$

2011-02-15  Gerrit M. Albrecht  <mail (at) gerrit-albrecht.de>

	* Tray icons are loaded from the data directory.
	* Closed connections will be destroyed.
	* Tray icon changes color if there are no active connections.

2010-08-10  Gerrit M. Albrecht  <mail (at) gerrit-albrecht.de>

	* Connection class provides multiple connections without blocking.

2010-07-27  Gerrit M. Albrecht  <mail (at) gerrit-albrecht.de>

	* System tray icon added.

2010-07-26  Gerrit M. Albrecht  <mail (at) gerrit-albrecht.de>

	* Restarted development using Qt.

2003-12-16  Gerrit M. Albrecht  <mail (at) gerrit-albrecht.de>

	* Started project using MFC. Implemented some little
	  test applications to learn/snoop the X11 protocol.